src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donation Process</fullName>
        <description>This sales process is used for the donation purpose.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <label>Balance Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Donation_Period_Years__c</fullName>
        <label>Donation Period (Years)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field specifies that these installment type records are related to which donation record.</inlineHelpText>
        <label>Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Installments</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This donor will be one of the contacts whose details will be donor&apos;s detail.</inlineHelpText>
        <label>Donor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Payment_Date__c</fullName>
        <inlineHelpText>This field specifies the due date for the payment.</inlineHelpText>
        <label>Due Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Donation_Amount__c</fullName>
        <inlineHelpText>This is the total amount donor want s to donate.</inlineHelpText>
        <label>Grand Total Donation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <label>Installment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Aggregated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field checks when the current opportunity has been taken for sggregation of amount.</inlineHelpText>
        <label>Is Aggregated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Installments__c</fullName>
        <formula>IF( ISPICKVAL( Payment_Frequency__c ,&apos;One-Time&apos;),0,
IF( ISPICKVAL( Payment_Frequency__c ,&apos;Monthly&apos;),12 *  Donation_Period_Years__c ,
IF( ISPICKVAL( Payment_Frequency__c ,&apos;Quarterly&apos;),4 *  Donation_Period_Years__c ,
IF( ISPICKVAL( Payment_Frequency__c ,&apos;Half-Yearly&apos;),2 *  Donation_Period_Years__c ,
IF( ISPICKVAL( Payment_Frequency__c ,&apos;Yearly&apos;),1 *  Donation_Period_Years__c  , 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field calculates the number of installments generated for a donation.</inlineHelpText>
        <label>Number Of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Payment__c</fullName>
        <label>Part Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <inlineHelpText>This picklist is for the payment status.</inlineHelpText>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Is_Aggregated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Donation_Record</fullName>
        <active>true</active>
        <businessProcess>Donation Process</businessProcess>
        <description>This record type is for creating records that will hold all the details related to donation.</description>
        <label>Donation Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installment_Record</fullName>
        <active>true</active>
        <businessProcess>Donation Process</businessProcess>
        <description>This record type is for creating records that will hold all the details of installment related to a specific donation.</description>
        <label>Installment Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Minimum_Donation_Year_Rule</fullName>
        <active>false</active>
        <description>This rule predefines the minimum number of years required to be entered in the Donation year field.</description>
        <errorConditionFormula>Donation_Period_Years__c &lt;=  0</errorConditionFormula>
        <errorDisplayField>Donation_Period_Years__c</errorDisplayField>
        <errorMessage>Enter valid number of years i.e greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Part_Payment_Amount_Rule</fullName>
        <active>true</active>
        <description>This rule validates the amount entered in the part payment field. It should not exceed the balance amount.</description>
        <errorConditionFormula>(Part_Payment__c   &gt;  Balance_Amount__c)  ||   
( Part_Payment__c   &lt; 0 )</errorConditionFormula>
        <errorDisplayField>Part_Payment__c</errorDisplayField>
        <errorMessage>Enter valid part payment. It should be greater than zero and not more than balance amount.</errorMessage>
    </validationRules>
</CustomObject>